# ros2_file_server

./: CMakeLists.txt  README.md  package.xml
src/: file_server.cpp
srv/: GetBinaryFile.srv  GetFile.srv
